# swtriviabot

./: .coveragerc  .env.example  .flake8  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  LAUNCHD.md  README.md  SYSTEMD.md  check_tracker.py  clear_commands.py  com.ncerny.swtriviabot.plist  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  swtriviabot-minimal.service  swtriviabot.service  swtriviabot.service.linux-example  test_dev_mode.py  verify_firestore.py  waivers.md
.agents/commands/: speckit.plan.md
.beads/: issues.jsonl
.github/: .artifactignore  copilot-instructions.md  pull_request_template.md
.github/workflows/: artifact.yml  debug-release-events.yml  pr-tests.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: github-actions.md
perf/: README.md
specs/001-discord-trivia-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-github-actions-cicd/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-hide-image-urls/: spec.md  tasks.md
src/: __init__.py  bot.py
src/commands/: __init__.py  answer.py  control_panel.py  list_answers.py  post_question.py  reset_answers.py  search_gif.py
src/models/: __init__.py  answer.py  image.py  session.py
src/services/: __init__.py  answer_service.py  giphy_service.py  image_service.py  image_tracker.py  klipy_service.py  permission_service.py  storage_service.py  tenor_service.py
src/utils/: __init__.py  formatters.py  (+3 more)
tests/: conftest.py
(+27 files in other folders)
